--- a/index.html
+++ b/index.html
@@ -171,8 +171,17 @@
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
-                        <a href="https://elo2026x.github.io/Creepy_Horror_Stories/"
-                            class="text-gray-300 hover:text-white hover:bg-red-900/20 px-3 py-2 rounded-md text-sm font-medium transition-colors">HORROR</a>
+                        <div class="card">
+                            <h2>CREEPY HORROR STORIES</h2>
+                            <p><strong>Status:</strong> ENTERTAINMENT DIVISION</p>
+                            <p>A collection of surreal and disturbing fiction. Dark narratives from the edge of reality,
+                                exploring the
+                                psychological depths of fear.</p>
+                            <a href="/horror/" class="btn"
+                                style="background:#550000; color: #fff; border: 1px solid #ff0000;">READ STORIES</a>
+                        </div>
+                        <a href="https://elo2026x.github.io/The_Victoria_Audit/"
+                            class="text-gray-300 hover:text-white hover:bg-green-900/20 px-3 py-2 rounded-md text-sm font-medium transition-colors">AUDIT</a>
                         <a href="#"
                             class="text-cyan-400 bg-cyan-900/20 px-3 py-2 rounded-md text-sm font-bold border border-cyan-500/30">FORENSICS</a>
                     </div>
