--- a/index.html
+++ b/index.html
@@ -171,18 +171,11 @@
                 </div>
                 <div class="hidden md:block">
                     <div class="ml-10 flex items-baseline space-x-4">
-                        <div class="card">
-                            <h2>CREEPY HORROR STORIES</h2>
-                            <p><strong>Status:</strong> ENTERTAINMENT DIVISION</p>
-                            <p>A collection of surreal and disturbing fiction. Dark narratives from the edge of reality,
-                                exploring the
-                                psychological depths of fear.</p>
-                            <a href="/horror/" class="btn"
-                                style="background:#550000; color: #fff; border: 1px solid #ff0000;">READ STORIES</a>
-                        </div>
-                        <a href="https://elo2026x.github.io/The_Victoria_Audit/"
+                        <a href="/horror/"
+                            class="text-gray-300 hover:text-white hover:bg-red-900/20 px-3 py-2 rounded-md text-sm font-medium transition-colors">HORROR</a>
+                        <a href="/The_Victoria_Audit/"
                             class="text-gray-300 hover:text-white hover:bg-green-900/20 px-3 py-2 rounded-md text-sm font-medium transition-colors">AUDIT</a>
-                        <a href="#"
+                        <a href="/The_Victoria_Texas_Franchise/"
                             class="text-cyan-400 bg-cyan-900/20 px-3 py-2 rounded-md text-sm font-bold border border-cyan-500/30">FORENSICS</a>
                     </div>
                 </div>
@@ -387,71 +380,97 @@
         <!-- AMAZON BOOKS -->
         <div style="padding: 40px 20px; background: #e5e5e5; color: #000;">
             <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">THE INTELLIGENCE LIBRARY</h3>
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-            <!-- Book 1 -->
-            <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-red-700 font-bold mb-2">THE VICTORIA FRANCHISE</h4>
-                <p class="text-sm text-gray-600 mb-4">Systems of Exploitation. The blueprint for dismantling corruption.</p>
-                <a href="https://www.amazon.com/dp/B0GHZK5ZVJ?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
+                <!-- Book 1 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-red-700 font-bold mb-2">THE VICTORIA FRANCHISE</h4>
+                    <p class="text-sm text-gray-600 mb-4">Systems of Exploitation. The blueprint for dismantling
+                        corruption.</p>
+                    <a href="https://www.amazon.com/dp/B0GHZK5ZVJ?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
+                <!-- Book 2 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-black font-bold mb-2">SYSTEM OF IMPUNITY</h4>
+                    <p class="text-sm text-gray-600 mb-4">How institutions protect themselves at the cost of the
+                        citizen.</p>
+                    <a href="https://www.amazon.com/dp/B0FX3CWLQ8?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
+                <!-- Book 3 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-black font-bold mb-2">CROSSROADS OF ACCOUNTABILITY</h4>
+                    <p class="text-sm text-gray-600 mb-4">Systemic failure and corruption in Victoria County.</p>
+                    <a href="https://www.amazon.com/dp/B0FWYK8FSW?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
+                <!-- Book 4 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-black font-bold mb-2">THE CONSTITUTIONAL CRISIS</h4>
+                    <p class="text-sm text-gray-600 mb-4">Analyzing the breakdown of legal norms in modern governance.
+                    </p>
+                    <a href="https://www.amazon.com/dp/B0DBRMMR6R?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
+                <!-- Book 5 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-black font-bold mb-2">THE WAR WITHIN</h4>
+                    <p class="text-sm text-gray-600 mb-4">A blueprint for defending America from its own institutional
+                        undoing.</p>
+                    <a href="https://www.amazon.com/dp/B0FVVWCDK1?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
+                <!-- Book 6 -->
+                <div class="border border-gray-400 p-6 bg-white shadow-lg">
+                    <h4 class="text-black font-bold mb-2">DIGITAL TRANSPARENCY</h4>
+                    <p class="text-sm text-gray-600 mb-4">A New Era of Governance. The Integrity Platform.</p>
+                    <a href="https://www.amazon.com/dp/B0FL1GRNQY?tag=emiliohortizi-20"
+                        class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY
+                        ($0.99)</a>
+                </div>
             </div>
-            <!-- Book 2 -->
-             <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-black font-bold mb-2">SYSTEM OF IMPUNITY</h4>
-                <p class="text-sm text-gray-600 mb-4">How institutions protect themselves at the cost of the citizen.</p>
-                <a href="https://www.amazon.com/dp/B0FX3CWLQ8?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
-            </div>
-            <!-- Book 3 -->
-             <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-black font-bold mb-2">CROSSROADS OF ACCOUNTABILITY</h4>
-                <p class="text-sm text-gray-600 mb-4">Systemic failure and corruption in Victoria County.</p>
-                <a href="https://www.amazon.com/dp/B0FWYK8FSW?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
-            </div>
-             <!-- Book 4 -->
-            <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-black font-bold mb-2">THE CONSTITUTIONAL CRISIS</h4>
-                <p class="text-sm text-gray-600 mb-4">Analyzing the breakdown of legal norms in modern governance.</p>
-                <a href="https://www.amazon.com/dp/B0DBRMMR6R?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
-            </div>
-             <!-- Book 5 -->
-            <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-black font-bold mb-2">THE WAR WITHIN</h4>
-                <p class="text-sm text-gray-600 mb-4">A blueprint for defending America from its own institutional undoing.</p>
-                <a href="https://www.amazon.com/dp/B0FVVWCDK1?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
-            </div>
-             <!-- Book 6 -->
-            <div class="border border-gray-400 p-6 bg-white shadow-lg">
-                <h4 class="text-black font-bold mb-2">DIGITAL TRANSPARENCY</h4>
-                <p class="text-sm text-gray-600 mb-4">A New Era of Governance. The Integrity Platform.</p>
-                <a href="https://www.amazon.com/dp/B0FL1GRNQY?tag=emiliohortizi-20" class="block w-full bg-black text-white text-center py-2 font-bold hover:bg-red-600 transition-colors">BUY ($0.99)</a>
-            </div>
-        </div>
-        
-        <!-- PROJECT CIVIL SHIELD LINK -->
-        <div class="max-w-4xl mx-auto mt-12 border border-gray-800 bg-gray-900 p-8 text-center">
-            <h3 class="text-2xl font-bold text-white mb-4 mono">PROJECT CIVIL SHIELD</h3>
-            <p class="text-gray-400 mb-6">Automated defense against systemic legal abuse. Track grants, secure evidence, and fight back.</p>
-            <div class="flex justify-center gap-4">
-                <a href="/The_Civil_Shield/" class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-500 transition-colors font-bold">LAUNCH PORTAL</a>
-                 <a href="https://github.com/ELO2026X/The_Civil_Shield" class="border border-gray-600 text-gray-400 px-6 py-2 rounded hover:text-white transition-colors">SOURCE CODE</a>
-            </div>
-        </div>
 
-        <!-- FICTION -->
-        <div class="mt-16 pt-16 border-t border-gray-300">
-            <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">ENTERTAINMENT DIVISION (FICTION)</h3>
-             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                <div class="border border-red-900/30 p-6 bg-black text-gray-300">
-                    <h4 class="text-red-500 font-bold mb-2">THE FORSAKEN KING</h4>
-                    <p class="text-sm text-gray-500 mb-4">A Death Knight's Unholy Crusade. Dark Fantasy LitRPG.</p>
-                    <a href="https://www.amazon.com/dp/B0CRLQRM4F?tag=emiliohortizi-20" class="block w-full border border-red-900 text-red-500 text-center py-2 hover:bg-red-900 hover:text-white transition-colors">READ NOW</a>
+            <!-- PROJECT CIVIL SHIELD LINK -->
+            <div class="max-w-4xl mx-auto mt-12 border border-gray-800 bg-gray-900 p-8 text-center">
+                <h3 class="text-2xl font-bold text-white mb-4 mono">PROJECT CIVIL SHIELD</h3>
+                <p class="text-gray-400 mb-6">Automated defense against systemic legal abuse. Track grants, secure
+                    evidence, and fight back.</p>
+                <div class="flex justify-center gap-4">
+                    <a href="/The_Civil_Shield/"
+                        class="bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-500 transition-colors font-bold">LAUNCH
+                        PORTAL</a>
+                    <a href="https://github.com/ELO2026X/The_Civil_Shield"
+                        class="border border-gray-600 text-gray-400 px-6 py-2 rounded hover:text-white transition-colors">SOURCE
+                        CODE</a>
                 </div>
-                 <div class="border border-purple-900/30 p-6 bg-black text-gray-300">
-                    <h4 class="text-purple-500 font-bold mb-2">REALM OF MORPHOSIA</h4>
-                    <p class="text-sm text-gray-500 mb-4">Surreal adventures in a shifting reality.</p>
-                     <a href="https://www.amazon.com/dp/B0CRTDPV2Z?tag=emiliohortizi-20" class="block w-full border border-purple-900 text-purple-500 text-center py-2 hover:bg-purple-900 hover:text-white transition-colors">READ NOW</a>
+            </div>
+
+            <!-- FICTION -->
+            <div class="mt-16 pt-16 border-t border-gray-300">
+                <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">ENTERTAINMENT DIVISION (FICTION)
+                </h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+                    <div class="border border-red-900/30 p-6 bg-black text-gray-300">
+                        <h4 class="text-red-500 font-bold mb-2">THE FORSAKEN KING</h4>
+                        <p class="text-sm text-gray-500 mb-4">A Death Knight's Unholy Crusade. Dark Fantasy LitRPG.</p>
+                        <a href="https://www.amazon.com/dp/B0CRLQRM4F?tag=emiliohortizi-20"
+                            class="block w-full border border-red-900 text-red-500 text-center py-2 hover:bg-red-900 hover:text-white transition-colors">READ
+                            NOW</a>
+                    </div>
+                    <div class="border border-purple-900/30 p-6 bg-black text-gray-300">
+                        <h4 class="text-purple-500 font-bold mb-2">REALM OF MORPHOSIA</h4>
+                        <p class="text-sm text-gray-500 mb-4">Surreal adventures in a shifting reality.</p>
+                        <a href="https://www.amazon.com/dp/B0CRTDPV2Z?tag=emiliohortizi-20"
+                            class="block w-full border border-purple-900 text-purple-500 text-center py-2 hover:bg-purple-900 hover:text-white transition-colors">READ
+                            NOW</a>
+                    </div>
                 </div>
-             </div>
-        </div>
+            </div>
             <div class="text-center mt-12">
                 <a href="https://www.amazon.com/shop/elo2025x"
                     class="inline-block border-2 border-red-600 text-black px-8 py-3 font-bold hover:bg-red-600 hover:text-white transition-colors">VIEW
