Analytics: Added Amazon Application ID

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>ELO2026X | FORENSIC ARCHIVE</title>
     <meta name="amazon-creator-verification" content="1nu62bh94mer27k0virpddvdmb">
     <meta name="credential-id" content="1nu62bh94mer27k0virpddvdmb">
+    <meta name="application-id" content="emiliohortizi-20.the_franchise">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-695HZ3HSYF"></script>
     <script>
