Added PDF, DOCX, and Cover Image for Crescent Valley Franchise

--- a/The_Crescent_Valley_Franchise/index.html
+++ b/The_Crescent_Valley_Franchise/index.html
@@ -38,13 +38,19 @@
     <header class="hero">
         <div class="overlay"></div>
         <div class="content">
+            <!-- Cover Image -->
+            <img src="cover.png" alt="The Crescent Valley Franchise Cover"
+                style="max-width: 300px; border: 2px solid var(--accent-red); box-shadow: 0 0 20px rgba(153, 0, 0, 0.5); margin-bottom: 20px;">
+
             <h1 class="glitch" data-text="THE CRESCENT VALLEY FRANCHISE">THE CRESCENT VALLEY FRANCHISE</h1>
             <p class="subtitle">MAPPING THE REGIONAL SUPPRESSION GRID</p>
             <div class="redaction-bar"></div>
             <p class="tagline">"The Franchise does not fear the law; it fears the Audit."</p>
 
             <div class="cta-container">
-                <a href="#manuscript" class="btn btn-primary">READ THE DOSSIER</a>
+                <a href="#manuscript" class="btn btn-primary">READ ONLINE</a>
+                <a href="The_Crescent_Valley_Franchise.pdf" class="btn btn-secondary" download>DOWNLOAD PDF</a>
+                <a href="The_Crescent_Valley_Franchise.docx" class="btn btn-secondary" download>DOWNLOAD DOCX</a>
                 <a href="../index.html" class="btn btn-secondary">RETURN TO HUB</a>
             </div>
         </div>
