Integrated EPA evidence: Added email and screenshot to audit page, updated dashboard

--- a/The_Victoria_Audit/index.html
+++ b/The_Victoria_Audit/index.html
@@ -352,6 +352,22 @@
                 </h3>
                 Grant Funds are being prioritized over Public Health. The "Border Security" money is shielding a local
                 government that is poisoning its own rural citizens.
+
+                <h3>EXHIBIT: EPA DIRECT CONFIRMATION (JAN 29, 2026)</h3>
+                <div
+                    style="border: 1px solid #ff3333; padding: 10px; margin-bottom: 20px; background: rgba(255, 0, 0, 0.05);">
+                    <p><strong>EVIDENCE STATUS:</strong> VERIFIED</p>
+                    <p>The EPA has formally acknowledged the receipt of evidence regarding Victoria County's Arsenic
+                        violations and is proceeding with "Appropriate Action."</p>
+
+                    <img src="./epa_email_jan29_2026.jpg" alt="EPA Email Confirmation"
+                        style="width: 100%; border: 1px solid #333; margin-top: 10px; margin-bottom: 10px;">
+                    <img src="./epa_screenshot_jan29_2026.jpg" alt="EPA Screenshot Confirmation"
+                        style="width: 100%; border: 1px solid #333;">
+
+                    <p style="font-size: 0.8em; color: #ff3333; margin-top: 10px;">FIG 5.1: Official Correspondence from
+                        EPA Region 6.</p>
+                </div>
             </div>
             <div class='evidence-card' id='01_Operation_Total_Grid_Matrix'>
                 <h2>CORROBORATION MATRIX: OPERATION TOTAL GRID
