--- a/index.html
+++ b/index.html
@@ -267,6 +267,17 @@
                     </p>
                     <p class="text-gray-500 text-xs mono">STATUS: RICO PATTERN DETECTED</p>
                 </div>
+
+                <!-- INTEL 4: EPA DIRECTIVE -->
+                <div class="dossier-card p-6 rounded-lg relative overflow-hidden group border-l-4 border-green-500">
+                    <h3 class="text-xl font-bold mb-2 text-white">EPA INTERVENTION (REGION 6)</h3>
+                    <p class="text-gray-300 text-sm leading-relaxed mb-4">
+                        Federal Environmental Protection Agency has formally acknowledged evidence of Arsenic violations
+                        and state-level cover-ups ("Urgent Flush").
+                        <strong>Direct confirmation received Jan 29, 2026.</strong>
+                    </p>
+                    <p class="text-gray-500 text-xs mono">STATUS: EVIDENCE VERIFIED // ACTION PENDING</p>
+                </div>
             </div>
 
             <!-- Column 2: Status & Comms -->
