--- a/index.html
+++ b/index.html
@@ -208,6 +208,20 @@
         </div>
         <h1 class="text-6xl md:text-8xl font-bold mb-4 glitch-text tracking-tighter"
             data-text="FORENSIC INVESTIGATIONS">FORENSIC INVESTIGATIONS</h1>
+
+        <!-- 3D LAUNCHER -->
+        <div class="mb-8">
+            <a href="./rpg_experience/index.html"
+                class="inline-flex items-center gap-2 bg-black border border-cyan-500 text-cyan-400 px-6 py-2 rounded hover:bg-cyan-900/20 hover:text-white transition-all transform hover:scale-105 group">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                    stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                        d="M14 10l-2 1m0 0l-2-1m2 1v2.5M20 7l-2 1m2-1l-2-1m2 1v2.5M14 4l-2-1-2 1M4 7l2-1M4 7l2 1M4 7v2.5M12 21l-2-1m2 1l2-1m-2 1v-2.5M6 18l-2-1v-2.5M18 18l2-1v-2.5" />
+                </svg>
+                <span class="mono font-bold">ENTER SIMULATION DECK</span>
+            </a>
+        </div>
+
         <p class="text-gray-400 max-w-2xl mx-auto mono text-sm md:text-base">
             SYSTEMIC CORRUPTION DETECTED // BOND FRAUD // GRANT MISAPPROPRIATION
             <br>
