--- a/The_Crescent_Valley_Franchise/index.html
+++ b/The_Crescent_Valley_Franchise/index.html
@@ -69,7 +69,7 @@
         <hr>
 
         <h2>INTRODUCTION: THE INVISIBLE ARCHITECTURE</h2>
-        <p>The "Golden Crescent"—a seemingly idyllic cluster of South Texas counties—is governed by an invisible
+        <p>The "Golden Crescent" a seemingly idyllic cluster of South Texas counties is governed by an invisible
             architecture of control. While the public sees a system of law and order, there exists a darker "franchise"
             of power. This ebook serves to expose the three pillars of this control: Media Dissonance, the Suppression
             Engine, and the Gaslighting Mechanisms that maintain the status quo.</p>
@@ -80,8 +80,8 @@
         <p><em>Mapping the divergence between arrests and indictments.</em></p>
 
         <h3>Chapter 1: The Indictment Lag (The 3% Black Hole)</h3>
-        <p>In a functioning judicial system, outcomes across neighboring counties—governed by the same state laws and
-            demographic realities—should be roughly comparable. In the Golden Crescent, they are statistically
+        <p>In a functioning judicial system, outcomes across neighboring counties governed by the same state laws and
+            demographic realities should be roughly comparable. In the Golden Crescent, they are statistically
             impossible.</p>
         <p>We analyzed the <strong>FY 2024-2025 SART Data</strong> (Sexual Assault Response Team) submitted to the
             Victoria County Commissioners Court. This data serves as a "Control Group" experiment that exposes the
