--- a/index.html
+++ b/index.html
@@ -207,61 +207,6 @@
         </div>
     </nav>
 
-    <!-- ... (Rest of Header/Main) ... -->
-
-    <!-- (Skipping to Footer Section) -->
-
-    <!-- FICTION -->
-    <div class="mt-16 pt-16 border-t border-gray-300">
-        <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">ENTERTAINMENT DIVISION</h3>
-
-        <!-- 3D & APPS GRID -->
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-12">
-
-            <!-- APP 1 -->
-            <div class="border border-blue-900/50 p-6 bg-black text-gray-300">
-                <h4 class="text-blue-500 font-bold mb-2">THE WORLD: R.P.G.</h4>
-                <p class="text-sm text-gray-500 mb-4">Immersive 3D Simulation Prototype.</p>
-                <a href="/rpg_experience/"
-                    class="block w-full border border-blue-800 text-blue-400 text-center py-2 hover:bg-blue-900/30 hover:text-white transition-colors">LOGIN</a>
-            </div>
-
-            <!-- APP 2 -->
-            <div class="border border-red-900/50 p-6 bg-black text-gray-300">
-                <h4 class="text-red-600 font-bold mb-2">PROJECT HORROR</h4>
-                <p class="text-sm text-gray-500 mb-4">Interactive Horror Anthology (Live).</p>
-                <a href="/horror/"
-                    class="block w-full border border-red-800 text-red-500 text-center py-2 hover:bg-red-900/30 hover:text-white transition-colors">ENTER</a>
-            </div>
-
-            <!-- APP 3 -->
-            <div class="border border-red-900/30 p-6 bg-black text-gray-300">
-                <h4 class="text-red-900 font-bold mb-2">HORROR PROJECT</h4>
-                <p class="text-sm text-gray-500 mb-4">Legacy Narrative Build.</p>
-                <a href="/horror_project/"
-                    class="block w-full border border-red-900/50 text-red-800 text-center py-2 hover:bg-red-900/20 hover:text-white transition-colors">ARCHIVE</a>
-            </div>
-        </div>
-
-        <h4 class="text-xl font-bold text-gray-500 text-center mb-8 font-mono">LITERATURE (FICTION)</h4>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-            <div class="border border-red-900/30 p-6 bg-black text-gray-300">
-                <h4 class="text-red-500 font-bold mb-2">THE FORSAKEN KING</h4>
-                <p class="text-sm text-gray-500 mb-4">A Death Knight's Unholy Crusade. Dark Fantasy LitRPG.</p>
-                <a href="https://www.amazon.com/dp/B0CRLQRM4F?tag=emiliohortizi-20"
-                    class="block w-full border border-red-900 text-red-500 text-center py-2 hover:bg-red-900 hover:text-white transition-colors">READ
-                    NOW</a>
-            </div>
-            <div class="border border-purple-900/30 p-6 bg-black text-gray-300">
-                <h4 class="text-purple-500 font-bold mb-2">REALM OF MORPHOSIA</h4>
-                <p class="text-sm text-gray-500 mb-4">Surreal adventures in a shifting reality.</p>
-                <a href="https://www.amazon.com/dp/B0CRTDPV2Z?tag=emiliohortizi-20"
-                    class="block w-full border border-purple-900 text-purple-500 text-center py-2 hover:bg-purple-900 hover:text-white transition-colors">READ
-                    NOW</a>
-            </div>
-        </div>
-    </div>
-
     <!-- Hero -->
     <header class="relative pt-20 pb-12 text-center">
         <div class="inline-block border border-red-500/50 bg-red-900/10 px-4 py-1 mb-4 rounded-full">
@@ -558,10 +503,40 @@
                 </div>
             </div>
 
-            <!-- FICTION -->
+            <!-- ENTERTAINMENT DIVISION (FICTION) -->
             <div class="mt-16 pt-16 border-t border-gray-300">
-                <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">ENTERTAINMENT DIVISION (FICTION)
-                </h3>
+                <h3 class="text-3xl font-bold text-black text-center mb-12 font-mono">ENTERTAINMENT DIVISION</h3>
+
+                <!-- 3D & APPS GRID -->
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto mb-12">
+
+                    <!-- APP 1 -->
+                    <div class="border border-blue-900/50 p-6 bg-black text-gray-300">
+                        <h4 class="text-blue-500 font-bold mb-2">THE WORLD: R.P.G.</h4>
+                        <p class="text-sm text-gray-500 mb-4">Immersive 3D Simulation Prototype.</p>
+                        <a href="/rpg_experience/"
+                            class="block w-full border border-blue-800 text-blue-400 text-center py-2 hover:bg-blue-900/30 hover:text-white transition-colors">LOGIN</a>
+                    </div>
+
+                    <!-- APP 2 -->
+                    <div class="border border-red-900/50 p-6 bg-black text-gray-300">
+                        <h4 class="text-red-600 font-bold mb-2">PROJECT HORROR</h4>
+                        <p class="text-sm text-gray-500 mb-4">Interactive Horror Anthology (Live).</p>
+                        <a href="/horror/"
+                            class="block w-full border border-red-800 text-red-500 text-center py-2 hover:bg-red-900/30 hover:text-white transition-colors">ENTER</a>
+                    </div>
+
+                    <!-- APP 3 (Legacy) -->
+                    <div class="border border-red-900/30 p-6 bg-black text-gray-300">
+                        <h4 class="text-red-900 font-bold mb-2">HORROR PROJECT</h4>
+                        <p class="text-sm text-gray-500 mb-4">Legacy Narrative Build.</p>
+                        <!-- CHANGED LINK TO /horror_project/dist/ IF NEEDED, BUT KEEPING STANDARD FOR NOW, WILL FIX NEXT -->
+                        <a href="/horror_project/dist/"
+                            class="block w-full border border-red-900/50 text-red-800 text-center py-2 hover:bg-red-900/20 hover:text-white transition-colors">ARCHIVE</a>
+                    </div>
+                </div>
+
+                <h4 class="text-xl font-bold text-gray-500 text-center mb-8 font-mono">LITERATURE (FICTION)</h4>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto">
                     <div class="border border-red-900/30 p-6 bg-black text-gray-300">
                         <h4 class="text-red-500 font-bold mb-2">THE FORSAKEN KING</h4>
