--- a/intel.html
+++ b/intel.html
@@ -143,8 +143,9 @@
             </div>
             <div class="dispatch-summary">
                 <strong style="color:var(--accent-color);">SPOLIATION ALERT:</strong> The server blackout on Jan 28 was
-                NOT weather-related. AEP Grid data proves 100% uptime. The servers were pulled offline manually during
-                the S&P Rating window.
+                a manual "Code 10" shutdown. Simultaneously, **$185,000+** in unbudgeted emergency funds were deployed
+                to
+                launch the "Pro-Pa" data filter. 100% Grid Stability confirmed by AEP.
             </div>
         </div>
 
