feat: Site-wide propagation of  Financial Audit findings

--- a/The_Victoria_Audit/index.html
+++ b/The_Victoria_Audit/index.html
@@ -369,6 +369,31 @@
                         EPA Region 6.</p>
                 </div>
             </div>
+            <div class='evidence-card' id='FILE_6_FINANCIAL_AUDIT'>
+                <h2>FILE 6: THE FINANCIAL AUDIT (The Blackout Cost)
+                </h2>
+                <strong>Exhibit ID:</strong> DHS-OIG-06
+                <strong>Subject:</strong> Misuse of Funds & Bond Rating Fraud
+                <strong>Date:</strong> Jan 30, 2026
+
+                <h3>THE COST OF SILENCE
+                </h3>
+                <li> <strong>The Event:</strong> Manual "Code 10" Server Blackout (Jan 28, 2026).
+                </li>
+                <li> <strong>The Pivot:</strong> Emergency migration to "Pro-Pa" subdomain.
+                </li>
+                <li> <strong>The Bill:</strong> Auditors estimate <strong>$45,000 - $185,000+</strong> in unbudgeted IT
+                    spend.
+                </li>
+
+                <h3>THE S&P PARADOX ("AA" RATING)
+                </h3>
+                The County reports "Stable Governance" to S&P Global to maintain an 'AA' Bond Rating while
+                simultaneously hemorrhaging emergency funds to rebuild a "corrupted" digital infrastructure.
+                <br><br>
+                <strong>Forensic Conclusion:</strong> The 2026 Bond Series is built on material non-disclosure of
+                systemic IT instability.
+            </div>
             <div class='evidence-card' id='01_Operation_Total_Grid_Matrix'>
                 <h2>CORROBORATION MATRIX: OPERATION TOTAL GRID
                 </h2>
