--- a/The_Victoria_Texas_Franchise/index.html
+++ b/The_Victoria_Texas_Franchise/index.html
@@ -139,8 +139,9 @@
                         A</strong>.</p>
             </div>
             <div class="card">
-                <h3>ERROR 0x800</h3>
-                <p>The failed attempt to scrub the digital crime scene on January 26, 2026.</p>
+                <h3>ERROR 0x800 ($185k)</h3>
+                <p>The <strong>$185,000</strong> cost to "rebuild" the server after the failed scrub on January 26, 2026
+                    (Pro-Pa Pivot).</p>
             </div>
             <div class="card">
                 <h3>DOCKET STASIS</h3>
