--- a/The_Civil_Shield/index.html
+++ b/The_Civil_Shield/index.html
@@ -52,9 +52,10 @@
             <div class="docket-content">
                 <span class="live-dot"></span>
                 <span class="docket-title">LIVE DOCKET WATCH:</span>
-                <span class="docket-time" style="color: var(--danger);">[DAY 2: FEDERAL OFFENSIVE]</span>
-                <span class="docket-text"><strong>INTELLIGENCE ALERT:</strong> VCSO migrating to "ProPhoenix" to hide
-                    iRIMS logs. "Ghost Town" reported at Courthouse. Federal "Strike Package" Active.</span>
+                <span class="docket-time" style="color: var(--danger);">[DAY 5: FINANCIAL AUDIT]</span>
+                <span class="docket-text"><strong>FORENSIC ALERT:</strong> Auditors confirm <strong>$185,000+</strong>
+                    unbudgeted "Emergency IT" spend for "Pro-Pa" pivot during Jan 28 Blackout. S&P "AA" Rating
+                    Contradiction detected.</span>
             </div>
         </div>
 
