--- a/The_Crescent_Valley_Franchise/index.html
+++ b/The_Crescent_Valley_Franchise/index.html
@@ -68,6 +68,13 @@
 
         <hr>
 
+        <div style="background: rgba(255,0,0,0.05); border: 1px solid red; padding: 20px; margin: 30px 0;">
+            <p style="color: red; font-weight: bold; text-align: center;">⚠ FORENSIC UPDATE (JAN 2026)</p>
+            <p><strong>THE $185,000 BLACKOUT:</strong> Audit reveals Victoria County spent over $185k in unbudgeted
+                funds to migrate legal data to "Pro-Pa" servers following the Jan 28 "Code 10" shutdown. This
+                expenditure directly contradicts the S&P "AA" Bond Rating of fiscal stability.</p>
+        </div>
+
         <h2>INTRODUCTION: THE INVISIBLE ARCHITECTURE</h2>
         <p>The "Golden Crescent" a seemingly idyllic cluster of South Texas counties is governed by an invisible
             architecture of control. While the public sees a system of law and order, there exists a darker "franchise"
